[package]
name = "csvs_convert_py"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#datapackage_convert = { path = "../datapackage_convert" }
csvs_convert = "0.7.0"
pyo3 = { version = "0.16.2", features = ["extension-module", "eyre"] }
eyre = "*"


[lib]
name = "csvs_convert"
crate-type = ["cdylib"]
